# htos

./: .gitignore  Cargo.toml  Makefile  README.md  dl_ovmf.sh  htos.x64.map  install.sh  make_bootable_disk.sh
boot/: Cargo.toml  main.rs  paging.rs
boot/.cargo/: config
boot/src/: main.rs
kernel/: Cargo.toml  link.x  main.rs  x86_64-unknown-none.json
kernel/.cargo/: config
kernel/arch/x64/: interrupts.rs  x64.json
kernel/src/: fonts.rs  graphics.rs  lib.rs  main.rs  screen.rs  text.rs  thread.rs
kernel/src/arch/x86_64/: gdt.rs  idt.rs  interrupts.rs  mod.rs  paging.rs
lib/: Cargo.toml  boot.rs  lib.rs  mutex.rs
lib/arch/: x64.rs
lib/src/: boot.rs  elf.rs  error.rs  lib.rs  mutex.rs  spin.rs
lib/src/arch/: x86_64.rs
