[package]
name = "htkernel"
version = "0.1.0"
authors = ["Totsugekitai <37617413+Totsugekitai@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
htlib = { path = "../lib" }
flags = "0.1.5"

[profile.release]
panic = "abort"
